// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button basic 1`] = `
.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-weight: 700;
  text-transform: uppercase;
  padding-left: 1rem;
  padding-right: 1rem;
  color: #FFF;
  background-color: #FDE68A;
  font-size: 0.875rem;
  height: 48px;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  background-color: #FBBF24;
}

.c0[disabled] {
  cursor: not-allowed;
  background: #D1D5DB;
  color: #6B7280;
}

<div>
  <button
    class="c0"
    type="button"
  >
    Button Test
  </button>
</div>
`;

exports[`Button is polymorphic 1`] = `
.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-weight: 700;
  text-transform: uppercase;
  padding-left: 1rem;
  padding-right: 1rem;
  color: #FFF;
  background-color: #FDE68A;
  font-size: 0.875rem;
  height: 48px;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  background-color: #FBBF24;
}

.c0[disabled] {
  cursor: not-allowed;
  background: #D1D5DB;
  color: #6B7280;
}

<div>
  <a
    class="c0"
    href="#"
    type="button"
  >
    Button Test
  </a>
</div>
`;

exports[`Button should have no accessibility violations 1`] = `
.c0 {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  cursor: pointer;
  font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-weight: 700;
  text-transform: uppercase;
  padding-left: 1rem;
  padding-right: 1rem;
  color: #FFF;
  background-color: #FDE68A;
  font-size: 0.875rem;
  height: 48px;
}

.c0:focus {
  outline: none;
}

.c0:hover {
  background-color: #FBBF24;
}

.c0[disabled] {
  cursor: not-allowed;
  background: #D1D5DB;
  color: #6B7280;
}

<div>
  <button
    aria-label=""
    class="c0"
    data-testid="button-test"
    type="button"
  >
    <span>
      icon
    </span>
  </button>
</div>
`;
